--- a/project1.lpi
+++ b/project1.lpi
@@ -34,7 +34,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="5">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -52,6 +52,16 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="SynEditMarkupFoldColors"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="syncolorfoldhighlighter.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="SynColorFoldHighlighter"/>
+      </Unit3>
+      <Unit4>
+        <Filename Value="synhighlighterbracket.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="SynHighlighterBracket"/>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
