--- a/project1.lpi
+++ b/project1.lpi
@@ -34,7 +34,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="5">
+    <Units Count="6">
       <Unit0>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -62,6 +62,11 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="SynHighlighterBracket"/>
       </Unit4>
+      <Unit5>
+        <Filename Value="syngutterfolddebug.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="SynGutterFoldDebug"/>
+      </Unit5>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
