--- a/IndividualCheck.lpi
+++ b/IndividualCheck.lpi
@@ -34,7 +34,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="6">
+    <Units Count="7">
       <Unit0>
         <Filename Value="IndividualCheck.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -66,6 +66,13 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="SynHighlighterMiniPas2"/>
       </Unit5>
+      <Unit6>
+        <Filename Value="uconfig.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="frmConfig"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="uConfig"/>
+      </Unit6>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
