--- a/IndividualCheck.lpi
+++ b/IndividualCheck.lpi
@@ -70,6 +70,7 @@
         <Filename Value="uconfig.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="frmConfig"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="uConfig"/>
       </Unit6>
