buggy solution: $ifdef,proc,$else,proc,$endif,begin end !

--- a/IndividualCheck.lpi
+++ b/IndividualCheck.lpi
@@ -91,6 +91,12 @@
         <IncludeAssertionCode Value="True"/>
       </SyntaxOptions>
     </Parsing>
+    <CodeGeneration>
+      <Checks>
+        <RangeChecks Value="True"/>
+        <OverflowChecks Value="True"/>
+      </Checks>
+    </CodeGeneration>
     <Linking>
       <Options>
         <Win32>
