--- a/demo/source/demo1.lpi
+++ b/demo/source/demo1.lpi
@@ -85,6 +85,9 @@
       </Checks>
     </CodeGeneration>
     <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf2"/>
+      </Debugging>
       <Options>
         <Win32>
           <GraphicApplication Value="True"/>
